# docs-chat-bot

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
docs_chat_bot/: __init__.py  chatgpt.py  docs_chat_bot_server.py  indexing.py  mixinbot.py  plugin.py  test.md  test.py  utils.py
docs_chat_bot/js/: chat-dialog-plugin.css  chat-dialog-plugin.js
