[metadata]
long_description = file:README.md
long_description_content_type = text/markdown

[options]
install_requires =
  mkdocs
  openai

[options.entry_points]
console_scripts =
    indexing_docs = docs_chat_bot.indexing:indexing_main
    docs_chat_bot_server = docs_chat_bot.docs_chat_bot_server:main
mkdocs.plugins =
    chat = docs_chat_bot.plugin:ChatPlugin
